# mobile_wireguard_app

./: Cargo.toml  README.md  build.rs
mobile_wireguard_app/: Cargo.toml  install.sh  org.kg.mobile_wireguard_app.desktop
mobile_wireguard_app/resources/: resources.gresource.xml  window.xml
mobile_wireguard_app/src/app/: mod.rs  wg_conf.rs
mobile_wireguard_app/src/window/: imp.rs  mod.rs
mobile_wireguard_app_helper/: Cargo.toml
mobile_wireguard_app_helper/src/: main.rs
mobile_wireguard_app_helper/src/app/: mod.rs  wg_conf.rs  wg_quick.rs
resources/: window.xml
src/: main.rs
src/app/: mod.rs  wg_conf.rs  wg_quick.rs
src/window/: imp.rs  mod.rs
